log
Fri Mar 20 01:45:21 AM UTC 2026: 
 tests:  0|5
total_score: 0/70
00299e8
Fri Mar 20 02:19:13 AM UTC 2026: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:7: error: implicit declaration of function ‘pushfront’; did you mean ‘pushFront’? [-Wimplicit-function-declaration]
   49 |       pushfront(L, elemento);
      |       ^~~~~~~~~
      |       pushFront
df0667d
Fri Mar 20 02:19:45 AM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
7b4cb34
Fri Mar 20 02:27:10 AM UTC 2026: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:60:21: error: implicit declaration of function ‘First’; did you mean ‘first’? [-Wimplicit-function-declaration]
   60 |    void* elemento = First(L);
      |                     ^~~~~
      |                     first
exercises.c:60:21: error: initialization of ‘void *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
exercises.c:63:15: error: dereferencing ‘void *’ pointer [-Werror]
   63 |       suma += *elemento;
      |               ^~~~~~~~~
exercises.c:63:15: error: void value not ignored as it ought to be
exercises.c:64:18: error: implicit declaration of function ‘Next’; did you mean ‘next’? [-Wimplicit-function-declaration]
   64 |       elemento = Next(lista);
      |                  ^~~~
      |                  next
exercises.c:64:23: error: ‘lista’ undeclared (first use in this function)
   64 |       elemento = Next(lista);
      |                       ^~~~~
exercises.c:64:23: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
8036cf3
Fri Mar 20 02:27:42 AM UTC 2026: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:12: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   63 |       suma += elemento;
      |            ^~
31cb764
